<resources>
    <string name="app_name">Waiting Time Activity</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="schedule_reminder">Set Reminders</string>
    <string name="setting">Setting</string>
    <string name="Q1">Waiting for something?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_survey">SurveyActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_third_fragment">Hello third fragment. Arg: %1$s</string>
    <string name="submit">Submit</string>
    <string name="am_waiting">I am waiting for …</string>
    <string name="was_waiting">I was waiting for …</string>
    <string name="set">Set</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="q0">When did that waiting happen?</string>
    <string name="q1">What are you waiting for?</string>
    <string name="q2">Where are you?</string>
    <string name="q3">Who is with you?</string>
    <string name="c31">I\'m alone</string>
    <string name="c32">Friend(s)</string>
    <string name="c33">Family</string>
    <string name="c34">Alone</string>
    <string name="c0">Others (please describe)</string>
    <string name="q4">What are you going to do while waiting?</string>
    <string name="c41">Work</string>
    <string name="c42">Relax</string>
    <string name="c43">Nothing</string>
    <string name="c44">Media</string>
    <string name="c45">Communication</string>
    <string name="c46">News</string>
    <string name="c47">Nothing</string>
    <string name="q5">What were you doing before this waiting?</string>
    <string name="q1b">What were you waiting for?</string>
    <string name="q2b">Where were you?</string>
    <string name="q3b">Who was with you?</string>
    <string name="q4b">What did you do while waiting?</string>
    <string name="q5b">What were you doing before that waiting?</string>
    <string name="q6b">How long (in minutes) did you wait?</string>
    <string name="tapToAnswer">Your answer …</string>
    <string name="example_when">E.g., 10 mins ago, 9:30, …</string>
    <string name="create_file">Create File</string>
    <string name="reset">Reset to default</string>
    <string name="test">Test now!</string>
    <string name="q6">How long (in minutes) will you wait?</string>
    <string name="r1">&lt;1</string>
    <string name="r2">1-5</string>
    <string name="r3">5-15</string>
    <string name="r4">15-60</string>
    <string name="r5">&gt;60</string>

    <string name="q7">Any smart devices with you?</string>
    <string name="c71">Phone</string>
    <string name="c72">Computer</string>
    <string name="c73">Watch</string>
    <string name="reminder1">Reminder</string>
    <string name="reminder2">Reminder</string>
    <string name="reminder3">Reminder</string>
    <string name="home">At home</string>
    <string name="car">In a car</string>
    <string name="restaurant">In a restaurant</string>
    <string name="office">At office</string>
    <string name="right_now">Right Now?</string>
    <string name="notificationMessage">Have you been waiting for something or someone since the last report?</string>
    <string name="help">Help</string>
    <string name="information">This application is developed by Jian Zheng (jzheng23@umd.edu) for the purpose of an ESM study on waiting-time activity. For more information, please visit external resources:</string>
    <string name="video">Video</string>
    <string name="website">Website</string>
    <string name="slides">Slides</string>
    <string name="reset_file">Reset file</string>
    <string name="off">Off</string>
    <string name="lazy">Lazy</string>
    <string name="exact">Exact</string>
    <string name="share">Share</string>
    <string name="reset_today">Reset Today</string>
    <string name="title_activity_base_survey">BaseSurveyActivity</string>
    <string name="privacy_policy">Privacy Policy</string>


</resources>