<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="code.with.cal.localnotificationstutorial.code.localnotificationstutorial.SettingActivity2">

    <LinearLayout

        style="@style/checkBoxStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="48dp"

            android:layout_weight="10"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/reminder1"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id = "@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/off" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/lazy" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/exact" />
        </RadioGroup>


    </LinearLayout>

    <TimePicker
        android:id="@+id/timePicker1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:scaleX="1"
        android:scaleY="1"
        android:timePickerMode="spinner" />

    <TimePicker
        android:id="@+id/timePicker2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:scaleX="1"
        android:scaleY="1"
        android:timePickerMode="spinner" />

    <TimePicker
        android:id="@+id/timePicker3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:scaleX="1"
        android:scaleY="1"
        android:timePickerMode="spinner" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:text="@string/schedule_reminder" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style = "?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/resetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="3dp"
            android:layout_weight="0.5"
            android:onClick="resetReminderTime"
            android:text="@string/reset" />

        <Button
            android:id="@+id/TestButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:layout_weight="0.5"
            android:onClick="testAlarm"
            android:text="@string/test" />

    </LinearLayout>

    <Button
        android:id="@+id/shareButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="shareFile"
        android:text="@string/share" />


</LinearLayout>